--- a/install
+++ b/install
@@ -415,16 +415,16 @@ EOF
 	echo "-----------------" >> /tmp/pigetInstall.log
 	
 	cd /
-#	checkInternet
-#	updatePi
-#	copyBoot
-#	generateDir
-#	generateCore
-#	createSymLink
-#	configureTimeZone
-#	. /pi/syncFromBoot
-#	postInstallScript
-#
+	checkInternet
+	updatePi
+	copyBoot
+	generateDir
+	generateCore
+	createSymLink
+	configureTimeZone
+	. /pi/syncFromBoot
+	postInstallScript
+
 	
 	echo " "
 	echo -e "$INFO Installation finished ! $OK"
